--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "axios": "^1.7.9",
     "expo": "^53.0.7",
     "expo-asset": "~11.1.5",
+    "expo-audio": "~0.4.5",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -45,15 +48,18 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1",
     "zustand": "^5.0.3",
-    "expo-clipboard": "~7.1.4"
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
